--- a/gui/detalles/detalleAfiliados.ui
+++ b/gui/detalles/detalleAfiliados.ui
@@ -6703,7 +6703,7 @@ color: #FFFFFF ; ;
         </spacer>
        </item>
        <item row="2" column="0" colspan="5">
-        <widget class="QTableView" name="tbl_articulos">
+        <widget class="QTableView" name="tbl_debitos">
          <property name="font">
           <font>
            <family>Arial</family>
@@ -6840,7 +6840,7 @@ color: #FFFFFF ; ;
   <tabstop>af_sucursal</tabstop>
   <tabstop>af_cbu</tabstop>
   <tabstop>btn_guardar_cbu</tabstop>
-  <tabstop>tbl_articulos</tabstop>
+  <tabstop>tbl_debitos</tabstop>
   <tabstop>tableView</tabstop>
  </tabstops>
  <resources/>
